--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,6 +62,7 @@
         /* Card Styles */
         .card {
             background: rgba(39, 39, 42, 0.6);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             border: none;
             border-radius: 16px;
@@ -333,6 +334,7 @@
             right: 0;
             bottom: 0;
             background: rgba(0, 0, 0, 0.8);
+            -webkit-backdrop-filter: blur(4px);
             backdrop-filter: blur(4px);
             z-index: 100;
             display: flex;
@@ -503,6 +505,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
+            -webkit-backdrop-filter: blur(4px);
             backdrop-filter: blur(4px);
             border: 1px solid rgba(255, 255, 255, 0.2);
         }
