--- a/frontend/index.html
+++ b/frontend/index.html
@@ -352,8 +352,25 @@
             padding: 24px;
             width: 100%;
             max-width: 500px;
+            max-height: 90vh;
+            overflow-y: auto;
             box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
             animation: modalSlideUp 0.3s ease;
+            scrollbar-width: thin;
+            scrollbar-color: #3f3f46 transparent;
+        }
+
+        .modal::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        .modal::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        .modal::-webkit-scrollbar-thumb {
+            background: #3f3f46;
+            border-radius: 10px;
         }
 
         @keyframes modalSlideUp {
@@ -1996,9 +2013,26 @@
 
         // Register service worker for PWA
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js')
-                .then(reg => console.log('Service Worker registered:', reg))
+            navigator.serviceWorker.register('/sw.js', { updateViaCache: 'none' })
+                .then(reg => {
+                    console.log('Service Worker registered:', reg);
+                    // Check for updates
+                    reg.addEventListener('updatefound', () => {
+                        const newWorker = reg.installing;
+                        newWorker.addEventListener('statechange', () => {
+                            if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+                                // New worker installed, reload will happen via controllerchange
+                                console.log('New version available, reloading...');
+                            }
+                        });
+                    });
+                })
                 .catch(err => console.log('Service Worker registration failed:', err));
+
+            // Automatic reload when new service worker takes control
+            navigator.serviceWorker.addEventListener('controllerchange', () => {
+                window.location.reload();
+            });
         }
     </script>
 </body>
