--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             min-height: 100vh;
             padding: 20px;
-            padding-bottom: 80px;
+            padding-bottom: 100px;
         }
 
         .container {
@@ -737,129 +737,287 @@
         .chip:active {
             transform: scale(0.95);
         }
+
+        /* Page Container Styles */
+        .page-content {
+            display: none;
+        }
+
+        .page-content.active {
+            display: block;
+        }
+
+        /* Bottom Tab Bar */
+        .bottom-tab-bar {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 70px;
+            background: rgba(39, 39, 42, 0.95);
+            -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            padding: 0 8px;
+            padding-bottom: env(safe-area-inset-bottom, 0);
+            z-index: 90;
+            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .tab-item {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 4px;
+            padding: 8px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            color: #71717a;
+            text-decoration: none;
+            user-select: none;
+        }
+
+        .tab-item:hover {
+            color: #a1a1aa;
+        }
+
+        .tab-item.active {
+            color: #2ECC71;
+        }
+
+        .tab-item.active .tab-icon {
+            transform: scale(1.1);
+        }
+
+        .tab-icon {
+            font-size: 24px;
+            transition: transform 0.2s ease;
+        }
+
+        .tab-label {
+            font-size: 11px;
+            font-weight: 500;
+            letter-spacing: 0.3px;
+        }
+
+        /* Center tab special styling */
+        .tab-item:nth-child(3) .tab-icon {
+            font-size: 28px;
+        }
+
+        .tab-item:nth-child(3).active .tab-icon {
+            transform: scale(1.15);
+        }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1>🍎 LifeStats</h1>
-        <div class="user-id" id="userIdDisplay">User ID: Loading...</div>
-
-        <!-- Animation Overlay -->
-        <div id="expansion-overlay"></div>
-
-        <!-- Notification Toast -->
-        <div id="notificationToast" class="notification-toast">
-            <span>✅</span>
-            <span id="notificationMessage">Message</span>
-        </div>
-
-        <!-- Food Entry Form -->
-        <div class="card">
-            <div class="section-title" style="display: flex; justify-content: space-between; align-items: center;">
-                Log Food
-                <div style="display: flex; flex-direction: column; align-items: center; cursor: pointer; margin-right: -4px; transition: transform 0.2s ease, filter 0.2s ease;"
-                    id="customBtnContainer" onclick="openCustomFoodModal(this)"
-                    onmousedown="this.style.transform='scale(0.95)'" onmouseup="this.style.transform='scale(1)'"
-                    onmouseleave="this.style.transform='scale(1)'">
-                    <div
-                        style="background: #2ECC71; width: 44px; height: 44px; border-radius: 10px; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
-                        <span style="font-size: 28px; color: #ffffff; line-height: 1;">+</span>
-                    </div>
-                    <span style="font-size: 10px; margin-top: 4px; color: #a1a1aa; font-weight: 500;">Custom</span>
+    <!-- Page 1: Stats -->
+    <div id="page1" class="page-content">
+        <div class="container">
+            <h1>📊 Stats</h1>
+            <div class="card">
+                <div class="section-title">Coming Soon</div>
+                <div class="empty-state">
+                    <div class="empty-state-emoji">📊</div>
+                    <p>Statistics and analytics will be displayed here</p>
                 </div>
-            </div>
-
-            <div class="form-group">
-                <label for="foodSearch">Search Food (FatSecret)</label>
-                <input type="search" id="foodSearch" placeholder="Type to search (e.g. 'Apple')" autocomplete="off">
-                <div id="searchResults" class="search-results"></div>
-            </div>
-
-            <form id="foodForm">
-                <div class="form-group">
-                    <label for="foodName">Food Name</label>
-                    <input type="text" id="foodName" placeholder="Manual entry" required autocomplete="off">
-                </div>
-
-                <!-- Portion Control -->
-                <div class="form-group hidden" id="portionSection">
-                    <div style="display: flex; gap: 10px;">
-                        <div style="flex: 1;">
-                            <label>Portion</label>
-                            <input type="number" id="portionInput" placeholder="1" step="any" min="0">
-                        </div>
-                        <div style="flex: 1;">
-                            <label>Unit</label>
-                            <input type="text" id="unitInput" disabled
-                                style="background: rgba(24, 24, 27, 0.4); color: #71717a; cursor: not-allowed;">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label>Nutrition <button type="button" class="toggle-btn"
-                            id="toggleNutrition">(Show)</button></label>
-                    <div id="nutritionInputs" class="nutrition-grid hidden">
-                        <div class="nutrition-item">
-                            <label>Calories</label>
-                            <input type="number" id="calInput" placeholder="0" min="0" step="1">
-                        </div>
-                        <div class="nutrition-item">
-                            <label>Protein</label>
-                            <input type="number" id="protInput" placeholder="0g" min="0" step="0.1">
-                        </div>
-                        <div class="nutrition-item">
-                            <label>Carbs</label>
-                            <input type="number" id="carbInput" placeholder="0g" min="0" step="0.1">
-                        </div>
-                        <div class="nutrition-item">
-                            <label>Fat</label>
-                            <input type="number" id="fatInput" placeholder="0g" min="0" step="0.1">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label>Meal Type</label>
-                    <div class="meal-type-grid">
-                        <button type="button" class="meal-type-btn active" data-value="breakfast">
-                            <span class="emoji">🌅</span>
-                            <span>Breakfast</span>
-                        </button>
-                        <button type="button" class="meal-type-btn" data-value="lunch">
-                            <span class="emoji">🌞</span>
-                            <span>Lunch</span>
-                        </button>
-                        <button type="button" class="meal-type-btn" data-value="dinner">
-                            <span class="emoji">🌙</span>
-                            <span>Dinner</span>
-                        </button>
-                        <button type="button" class="meal-type-btn" data-value="snack">
-                            <span class="emoji">🍿</span>
-                            <span>Snack</span>
-                        </button>
-                    </div>
-                    <input type="hidden" id="mealType" value="breakfast" required>
-                </div>
-
-                <button type="submit" class="primary-btn">Add Meal</button>
-            </form>
-        </div>
-
-        <!-- Today's Meals -->
-        <div class="card">
-            <div class="section-title">
-                Today's Meals
-                <span id="dailyTotal" class="daily-total">0 kcal</span>
-            </div>
-            <div id="mealsList" class="meals-list">
-                <!-- Meals will be inserted here -->
             </div>
         </div>
     </div>
 
+    <!-- Page 2: Goals -->
+    <div id="page2" class="page-content">
+        <div class="container">
+            <h1>🎯 Goals</h1>
+            <div class="card">
+                <div class="section-title">Coming Soon</div>
+                <div class="empty-state">
+                    <div class="empty-state-emoji">🎯</div>
+                    <p>Your goals and targets will be displayed here</p>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <!-- Page 3: Food Logging (Current Page) -->
+    <div id="page3" class="page-content active">
+        <div class="container">
+            <h1>🍎 LifeStats</h1>
+            <div class="user-id" id="userIdDisplay">User ID: Loading...</div>
+
+            <!-- Animation Overlay -->
+            <div id="expansion-overlay"></div>
+
+            <!-- Notification Toast -->
+            <div id="notificationToast" class="notification-toast">
+                <span>✅</span>
+                <span id="notificationMessage">Message</span>
+            </div>
+
+            <!-- Food Entry Form -->
+            <div class="card">
+                <div class="section-title" style="display: flex; justify-content: space-between; align-items: center;">
+                    Log Food
+                    <div style="display: flex; flex-direction: column; align-items: center; cursor: pointer; margin-right: -4px; transition: transform 0.2s ease, filter 0.2s ease;"
+                        id="customBtnContainer" onclick="openCustomFoodModal(this)"
+                        onmousedown="this.style.transform='scale(0.95)'" onmouseup="this.style.transform='scale(1)'"
+                        onmouseleave="this.style.transform='scale(1)'">
+                        <div
+                            style="background: #2ECC71; width: 44px; height: 44px; border-radius: 10px; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
+                            <span style="font-size: 28px; color: #ffffff; line-height: 1;">+</span>
+                        </div>
+                        <span style="font-size: 10px; margin-top: 4px; color: #a1a1aa; font-weight: 500;">Custom</span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="foodSearch">Search Food (FatSecret)</label>
+                    <input type="search" id="foodSearch" placeholder="Type to search (e.g. 'Apple')" autocomplete="off">
+                    <div id="searchResults" class="search-results"></div>
+                </div>
+
+                <form id="foodForm">
+                    <div class="form-group">
+                        <label for="foodName">Food Name</label>
+                        <input type="text" id="foodName" placeholder="Manual entry" required autocomplete="off">
+                    </div>
+
+                    <!-- Portion Control -->
+                    <div class="form-group hidden" id="portionSection">
+                        <div style="display: flex; gap: 10px;">
+                            <div style="flex: 1;">
+                                <label>Portion</label>
+                                <input type="number" id="portionInput" placeholder="1" step="any" min="0">
+                            </div>
+                            <div style="flex: 1;">
+                                <label>Unit</label>
+                                <input type="text" id="unitInput" disabled
+                                    style="background: rgba(24, 24, 27, 0.4); color: #71717a; cursor: not-allowed;">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Nutrition <button type="button" class="toggle-btn"
+                                id="toggleNutrition">(Show)</button></label>
+                        <div id="nutritionInputs" class="nutrition-grid hidden">
+                            <div class="nutrition-item">
+                                <label>Calories</label>
+                                <input type="number" id="calInput" placeholder="0" min="0" step="1">
+                            </div>
+                            <div class="nutrition-item">
+                                <label>Protein</label>
+                                <input type="number" id="protInput" placeholder="0g" min="0" step="0.1">
+                            </div>
+                            <div class="nutrition-item">
+                                <label>Carbs</label>
+                                <input type="number" id="carbInput" placeholder="0g" min="0" step="0.1">
+                            </div>
+                            <div class="nutrition-item">
+                                <label>Fat</label>
+                                <input type="number" id="fatInput" placeholder="0g" min="0" step="0.1">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Meal Type</label>
+                        <div class="meal-type-grid">
+                            <button type="button" class="meal-type-btn active" data-value="breakfast">
+                                <span class="emoji">🌅</span>
+                                <span>Breakfast</span>
+                            </button>
+                            <button type="button" class="meal-type-btn" data-value="lunch">
+                                <span class="emoji">🌞</span>
+                                <span>Lunch</span>
+                            </button>
+                            <button type="button" class="meal-type-btn" data-value="dinner">
+                                <span class="emoji">🌙</span>
+                                <span>Dinner</span>
+                            </button>
+                            <button type="button" class="meal-type-btn" data-value="snack">
+                                <span class="emoji">🍿</span>
+                                <span>Snack</span>
+                            </button>
+                        </div>
+                        <input type="hidden" id="mealType" value="breakfast" required>
+                    </div>
+
+                    <button type="submit" class="primary-btn">Add Meal</button>
+                </form>
+            </div>
+
+            <!-- Today's Meals -->
+            <div class="card">
+                <div class="section-title">
+                    Today's Meals
+                    <span id="dailyTotal" class="daily-total">0 kcal</span>
+                </div>
+                <div id="mealsList" class="meals-list">
+                    <!-- Meals will be inserted here -->
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Page 4: Activity -->
+    <div id="page4" class="page-content">
+        <div class="container">
+            <h1>⚡ Activity</h1>
+            <div class="card">
+                <div class="section-title">Coming Soon</div>
+                <div class="empty-state">
+                    <div class="empty-state-emoji">⚡</div>
+                    <p>Activity tracking will be displayed here</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Page 5: Settings -->
+    <div id="page5" class="page-content">
+        <div class="container">
+            <h1>⚙️ Settings</h1>
+            <div class="card">
+                <div class="section-title">Coming Soon</div>
+                <div class="empty-state">
+                    <div class="empty-state-emoji">⚙️</div>
+                    <p>Settings and preferences will be displayed here</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bottom Tab Bar -->
+    <nav class="bottom-tab-bar">
+        <div class="tab-item" onclick="switchPage(1)">
+            <div class="tab-icon">📊</div>
+            <div class="tab-label">Stats</div>
+        </div>
+        <div class="tab-item" onclick="switchPage(2)">
+            <div class="tab-icon">🎯</div>
+            <div class="tab-label">Goals</div>
+        </div>
+        <div class="tab-item active" onclick="switchPage(3)">
+            <div class="tab-icon">🍎</div>
+            <div class="tab-label">Food</div>
+        </div>
+        <div class="tab-item" onclick="switchPage(4)">
+            <div class="tab-icon">⚡</div>
+            <div class="tab-label">Activity</div>
+        </div>
+        <div class="tab-item" onclick="switchPage(5)">
+            <div class="tab-icon">⚙️</div>
+            <div class="tab-label">Settings</div>
+        </div>
+    </nav>
 
     <!-- Custom Food Modal -->
     <div id="customFoodModalOverlay" class="modal-overlay hidden custom-food-modal">
@@ -1161,6 +1319,57 @@
     <!-- Scripts -->
     <script src="/storage.js"></script>
     <script>
+        // ===== PAGE NAVIGATION =====
+        function switchPage(pageNumber) {
+            // Hide all pages
+            document.querySelectorAll('.page-content').forEach(page => {
+                page.classList.remove('active');
+            });
+
+            // Show selected page
+            const selectedPage = document.getElementById(`page${pageNumber}`);
+            if (selectedPage) {
+                selectedPage.classList.add('active');
+            }
+
+            // Update tab bar active state
+            document.querySelectorAll('.tab-item').forEach((tab, index) => {
+                tab.classList.remove('active');
+                if (index + 1 === pageNumber) {
+                    tab.classList.add('active');
+                }
+            });
+
+            // Update URL hash
+            window.location.hash = `page${pageNumber}`;
+
+            // Scroll to top
+            window.scrollTo(0, 0);
+        }
+
+        // Restore page from URL hash on load
+        window.addEventListener('DOMContentLoaded', () => {
+            const hash = window.location.hash;
+            if (hash && hash.startsWith('#page')) {
+                const pageNumber = parseInt(hash.replace('#page', ''));
+                if (pageNumber >= 1 && pageNumber <= 5) {
+                    switchPage(pageNumber);
+                }
+            }
+        });
+
+        // Handle browser back/forward buttons
+        window.addEventListener('hashchange', () => {
+            const hash = window.location.hash;
+            if (hash && hash.startsWith('#page')) {
+                const pageNumber = parseInt(hash.replace('#page', ''));
+                if (pageNumber >= 1 && pageNumber <= 5) {
+                    switchPage(pageNumber);
+                }
+            }
+        });
+
+        // ===== FOOD LOGGING LOGIC =====
         // Meal type emoji mapping
         const mealEmojis = {
             breakfast: '🌅',
